--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -5,6 +5,10 @@ body{
 a{
 	transition:all 0.5s;
 	color:#00325A;
+	outline:none !important;
+}
+button:focus{
+		outline:none !important;
 }
 a:hover, a:focus{
 	opacity:1;
@@ -83,6 +87,26 @@ p{
 	font-size: 20px;
     margin-bottom: 5px;
 }
+.navbar-nav li a .fa.fa-angle-down{
+	margin-left: 5px;
+    top: 50%;
+    position: absolute;
+}
+.navbar-nav li a .fa.fa-korneez{
+	height: 15px;
+    text-align: center;
+    width: 100%;
+}
+.navbar-nav li a .fa.fa-korneez:before{
+	content: "";
+    background: url(../images/about_icon.png) center center;
+    height: 24px;
+    width: 24px;
+    position: absolute;
+    left: 50%;
+    margin-left: -12px;
+	
+}
 .navbar-nav > li > a{
 	border-bottom:3px #fff solid;	
 }
@@ -90,13 +114,33 @@ p{
 	border-bottom:3px #003259 solid;
 	background:none;
 }
+.nav .open > a, .nav .open > a:hover, .nav .open > a:focus{
+	background:transparent;
+}
+.dropdown-menu > li > a{
+	text-align:left;
+}
+.dropdown-submenu {
+  position: relative;
+}
+.dropdown-submenu .fa{
+	font-size:12px !important;
+	float:right;
+	margin-top:3px;
+}
+
+.dropdown-submenu .dropdown-menu {
+  top: 0;
+  left: 100%;
+  margin-top: -6px;
+  border-radius:0;
+}
 .carousel-fade .carousel-control .fa {
     position: relative;
     top: 45%;
 }
 .owl-carousel{
-	margin-top:20px;
-	margin-bottom:20px;
+
 }
 .owl-carousel .item{
 }
@@ -108,6 +152,7 @@ p{
 .owl-nav .fa{
 	color:#fff;
 	font-size:35px;
+	text-shadow:1px 1px 1px #000;
 }
 .owl1 .owl-nav .fa{
 	color:#980200;
@@ -116,11 +161,11 @@ p{
 
 .owl-carousel .owl-nav button.owl-next{
 	float: right;
-    margin-right: -30px;
+    margin-right: 30px;
 }
 .owl-carousel .owl-nav button.owl-prev{
 	float: left;
-    margin-left: -30px;
+    margin-left: 30px;
 }
 .owl-dots{
 	display:none;
@@ -165,17 +210,28 @@ p{
 	animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
 }
 .products .shop-box{
-	color:#fff;
-	background:#333333;
-	font-weight:300;
-	font-size:24px;
-	display:block;
-	padding:15px;
+	background: #fff;
+    font-weight: 300;
+    font-size: 16px;
+    display: block;
+    padding: 5px;
+    border: 1px #00325A solid;
 }
 
 .ads{
 		padding:4.6875rem 0;	
 		border-top:1px #00325A solid;
+}
+.ads h2{
+	color:#003259;
+	font-size: 33px;
+	font-weight:300;
+}
+.ads h3{
+	color:#fff;
+	background:#00325A;
+	padding:20px;
+	margin:0;
 }
 .animated{
 		padding:4.6875rem 0;	
@@ -242,32 +298,33 @@ footer a{
     transform: translate3d(4px, 0, 0);
   }
 }
+@media (max-width: 768px){
+	.navbar-brand {
+		margin-right: 0px;
+	}
+	h2 {
+    font-size: 36px;
+	}
+	.animated p {
+		font-size: 24px;
+	}
+}
 @media (max-width: 767px){
 	.container-fluid {
-		padding: 0 1.6875rem;
-	}
+    padding: 0 1.6875rem;
+}
 	.owl-nav {
     top: 28%;
 	}
-	.products {
-		padding: 4.6875rem 2.6875rem;
-	}
-	.navbar-brand {
-		float: none !important;
-	}
+	
 	.navbar-nav {
 		margin: 7.5px 2px;
+		width:100%;
 	}
-	.navbar-brand {
-		height: auto;
-		margin-right: 50px;
-		float: none !important;
-		text-align: center;
-		margin: 0 !important;
-	}
-	.navbar-brand > img {
-		margin: 0 auto;
-	}
+	.navbar-nav > li {
+    float: left;
+    width: 100%;
+}
 	footer ul {
 		font-size: 18px;
 		float: none;
@@ -283,5 +340,12 @@ footer a{
 		display: block;
 		max-width: 100%;
 		height: auto;
+	}
+	.navbar-collapse{
+		width:100%;
+	}
+	.navbar-toggle .fa-bars{
+		font-size: 24px;
+		margin: 10px 0 0 0;
 	}
 }
